[gd_scene load_steps=2 format=2]

[ext_resource path="res://ordenação de lista.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 46.0
margin_top = 165.0
margin_right = 197.0
margin_bottom = 213.0
__meta__ = {
"_edit_group_": true
}

[node name="LineEdit" type="LineEdit" parent="Button"]
margin_right = 151.0
margin_bottom = 48.0

[node name="Button2" type="Button" parent="."]
margin_left = 48.0
margin_top = 224.0
margin_right = 198.0
margin_bottom = 299.0
clip_text = true

[node name="Label" type="Label" parent="Button2"]
margin_left = 3.0
margin_top = 15.0
margin_right = 146.0
margin_bottom = 63.0
text = "CLIQUE AQUI PARA INSERIR CADA NUMERO"
align = 1
valign = 1
autowrap = true

[node name="Button3" type="Button" parent="."]
margin_left = 206.0
margin_top = 225.0
margin_right = 355.0
margin_bottom = 299.0
text = "ORDENE A LISTA CLICANDO AQUI"

[node name="Button4" type="Button" parent="."]
margin_left = 207.0
margin_top = 164.0
margin_right = 435.0
margin_bottom = 212.0

[node name="ColorRect" type="ColorRect" parent="Button4"]
margin_right = 228.0
margin_bottom = 48.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Button4"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 7.0
margin_top = 6.0
margin_right = 223.0
margin_bottom = 43.0

[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
